# custom_comm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  back.txt  code-review.md  delivery-report.md  design-doc.md  design-notes.md  ref-survey.md  req-analysis.md  requirements.txt  setup.py  sync.sh
cmake/: FindCANN.cmake
docs/: faq.md  todo.md
docs/design/: class_hierarchy.puml  mesh1d_allgather.d2  module_layers.d2  seq_phase2_flow.puml
ops/allgather_batch/inc/: common.h  engine_ctx.h  hccl_custom_allgather_batch.h
ops/allgather_batch/src/: all_gather_batch.cc  ccu_kernel_ag_batch_mesh1d.cc  decomposed_strategy.cc  engine_ctx.cc
ops/allgather_batch/src/ccu/: ccu_kernel_ag_batch_mesh1d.cc  ccu_kernel_ag_batch_mesh1d.h  engine_ctx.cc  engine_ctx.h
ops/allgather_batch/src/ccu_v2/inc/: all_gather_batch_item.h  ccu_kernel_all_gather_batch_mesh1d.h  common.h  hccl_custom_allgather_batch.h  host_utils.h  log.h  sync_interface.h
ops/allgather_batch/src/ccu_v2/op_host/: all_gather_batch.cc  host_utils.cc  launch_kernel.cc  launch_kernel.h
ops/allgather_batch/src/ccu_v2/op_kernel/: ccu_kernel_all_gather_batch_mesh1d.cc
ops/allgather_batch/src/decomposed/: decomposed_strategy.cc
python/custom_comm/: __init__.py  ops.py
python/custom_comm/converters/: __init__.py  allgather_batch_converter.py
tests/: bench_allgather_batch.py  conftest.py  test_allgather_batch.py  test_graph_mode.py
tests/allgather_batch/: bench.py  test_eager.py  test_graph.py
torch_ext/csrc/: allgather_batch.cpp  ops_registration.cpp
